--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Hello World</h1><h2>23f2003980@ds.study.iitm.ac.in</h2> 
+<h1>Hello World</h1>
 <!--email_off-->23f2003980@ds.study.iitm.ac.in<!--/email_off-->
